--- a/homeWork3/src/app/components/house create/house.component.html
+++ b/homeWork3/src/app/components/house create/house.component.html
@@ -19,9 +19,9 @@
   ><br>
 
   <label [ngStyle]="{color: squareInput.invalid ? 'red' : 'black'}">
-    Select square meters <br>
+    Select price <br>
   </label>
-  <input type="text" name="square" [(ngModel)]="houseToRegister.square"
+  <input type="text" name="square" [(ngModel)]="houseToRegister.price"
          minlength="2"
          #squareInput = "ngModel"
 
